# python-mmorpg-server

./: .env  .gitignore  DATABASE.md  Dockerfile  ENTITY.md  NETWORK.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  WEBSOCKETS.md  docker-compose.yml  main.py  pyproject.toml
.junie/: guidelines.md
common/: __init__.py  config.py  log.py  utils.py
database/: database_manager.py  mongodb.py  mongodb_creator.py  mongodb_loader.py
database/models/: __init__.py  guild.py  player.py  statistics.py
game/: packet_data.py  world.py
game/entity/: entity.py
game/entity/character/: character.py
game/entity/character/combat/: hit.py
game/entity/character/effect/: __init__.py  poison.py  status.py
game/entity/character/player/: incoming.py  player.py
game/info/: formulas.py  loader.py
network/: __init__.py  connection.py  model.py  modules.py  network_manager.py  opcodes.py  packet.py  packets.py  shared_types.py  socket_handler.py  utils.py
network/impl/: __init__.py  ability.py  achievement.py  animation.py  blink.py  bubble.py  camera.py  chat.py  combat.py  command.py  connected.py  container.py  countdown.py  crafting.py  death.py  despawn.py  effect.py  enchant.py  equipment.py  experience.py  friends.py  guild.py  handshake.py  heal.py  interface.py  list.py  lootbag.py  map.py  minigame.py  movement.py  music.py  network.py  notification.py  npc.py  overlay.py  player.py  pointer.py  points.py  poison.py  pvp.py  (+13 more)
tests/: test_character_intervals.py  test_formulas.py  test_packets.py  test_poison.py  test_status.py  test_utils.py  test_ws.py
(+5 files in other folders)
