[project]
name = "python-mmorpg-server"
version = "0.0.1"
description = "Python MMORPG Server"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "websockets>=12.0",
    "motor>=3.3.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=7.0.0",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.14"
strict = false
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["Kaetram-Open"]
